Validation info added

--- a/index_de.html
+++ b/index_de.html
@@ -1456,6 +1456,12 @@ defined('_JEXEC') or die;
       <li><a href="http://opensourcematters.org/index.php?option=com_content&amp;view=article&amp;id=56&amp;Itemid=155" target="_blank"> Lizenz und Nutzungsrecht </a></li>
     </ul>
   </div>
+  <div id="validation">
+    <h4>Validation</h4>
+    <div class="box-notification">
+        <span>In unseren Vorlagen befolgen wir semantischen Regeln für das Schreiben vom Code HTML-Markup und den CSS-Stilen. Aber einige Fehler können sowieso bei W3C-Validierung auftreten. Erstellen des zu 100 Prozent korrekten Codes entsprechend den Standards vom W3C Consortium beschränkt die Verwendung von modernen Technologien zum Erstellen von Websites wie Spezifikation CSS3 und HTML5 Markup. Das Ziel unseres Unternehmens liegt darin, dass wir reiche Benutzererfahrung mit hochwertigen Vorlage zur Verfügung stellen möchten. Aus diesem Grund befolgen wir nicht allen Regeln.</span>
+     </div>
+</div>
 
 </section>
 
