--- a/index_es.html
+++ b/index_es.html
@@ -1473,6 +1473,13 @@ defined('_JEXEC') or die;
       <li><a href="http://opensourcematters.org/index.php?option=com_content&amp;view=article&amp;id=56&amp;Itemid=155" target="_blank">Licencia y Uso</a></li>
     </ul>
   </div>
+  <div id="validation">
+        <h4>Validation</h4>
+        <div class="box-notification">
+        <span>Las etiquetas HTML y estilos CSS utilizados en nuestras plantillas son semбnticamente correctos y vбlidos. Sin embargo, algunos errores del W3C pueden presentarse. Si el cуdigo es 100% W3C se elimina el uso de tecnologнas modernos como CSS3 y HTML5. Nuestro objetivo es entregar una amplia experiencia de usuario con plantillas de alta calidad y, a veces tenemos que romper algunas reglas.</span>
+      </div>
+</div>
+
 
 </section>
 
