--- a/index_fr.html
+++ b/index_fr.html
@@ -1462,6 +1462,13 @@ defined('_JEXEC') or die;
       <li><a href="http://opensourcematters.org/index.php?option=com_content&amp;view=article&amp;id=56&amp;Itemid=155" target="_blank">Licence et utilisation</a></li>
     </ul>
   </div>
+  <div id="validation">
+        <h4>Validation</h4>
+     <div class="box-notification">
+        <span>Les deux codes, le balisage HTML (Langage hypertexte) et les styles CSS, utilisés dans nos modèles, sont sémantiquement corrects et valides. Néanmoins, certaines erreurs W3C peuvent toujours avoir lieu. Rendre valide le code 100% W3C élimine l'utilisation des technologies modernes de site web comme les fonctions de CSS3 et des balises HTML5. Notre objectif est de fournir une riche expérience de l'utilisateur avec des modèles de haute qualité et parfois nous devons enfreindre certaines règles.</span>
+      </div>
+</div>
+
 
 </section>
 
