--- a/index_pl.html
+++ b/index_pl.html
@@ -1463,7 +1463,12 @@ defined('_JEXEC') or die;
       <li><a href="http://opensourcematters.org/index.php?option=com_content&amp;view=article&amp;id=56&amp;Itemid=155" target="_blank">Licencja i warunki użytkowania</a></li>
     </ul>
   </div>
-
+<div id="validation">
+        <h4>Validation</h4>
+        <div class="box-notification">
+        <span>Zarówno HTML jak i style CSS używane w naszych szablonach są semantycznie poprawne. Jednakże, niektóre błędy W3C mogą się pojawić. Sprawienie, że kod jest w 100% poprawny W3C eliminuje możliwość użycia nowoczesnych technologii jak CSS3 oraz HTML5. Naszym celem jest dostarczenie przyjaznych dla użytkowników oraz wysokiej jakości szablonów, jednocześnie czasami jesteśmy zmuszeni ominąć niektóre zasady.</span>
+      </div>
+</div>
 </section>
 
 </div>
