--- a/index_pt.html
+++ b/index_pt.html
@@ -1492,7 +1492,12 @@ O efeito de parallax pode ser adicionado ao template com a ajuda do plugin de jQ
       <li><a href="http://opensourcematters.org/index.php?option=com_content&amp;view=article&amp;id=56&amp;Itemid=155" target="_blank">Licensa e Uso</a></li>
     </ul>
   </div>
-
+<div id="validation">
+  <h4>Validação</h4>
+  <div class="box-notification">
+  <span>Ambos marcação do HTML e estilos CSS usados em nossos temas são semânticamente corretos e válidos. Entretanto, alguns erros no validador do W3C ainda podem ocorrer. Criar código 100% válido pelas diretrizes do W3C elimina o uso de tecnologias web modernas, como o CSS3 e marcação HTML5. Nossa proposta é prover experiências ricas ao usuário com temas de alta qualidade e, para isso, temos que quebrar algumas regras.</span>
+  </div>
+</div>
 </section>
 
 </div>
