--- a/index_ru.html
+++ b/index_ru.html
@@ -1499,6 +1499,13 @@ defined('_JEXEC') or die;
     </ul>
   </div>
 
+  <div id="validation">
+    <h4>Валидация</h4>
+    <div class="box-notification">
+        <span>В наших шаблонах мы придерживаемся семантических правил написания кода HTML-разметки и CSS-стилей. Однако, некоторые ошибки все же могут возникать при W3C валидации. Создание 100-процентно правильного кода, согласно стандартам консорциума W3C, ограничивает использование современных технологий создания сайтов, таких как спецификация CSS3 и разметка HTML5. Целью нашей компании является предоставление богатого пользовательского опыта с высококачественными шаблонами, и иногда нам приходится нарушать некоторые правила.</span>
+     </div>
+</div>
+
 </section>
 
 </div>
