--- a/index_tr.html
+++ b/index_tr.html
@@ -1463,6 +1463,12 @@ defined('_JEXEC') or die;
       <li><a href="http://opensourcematters.org/index.php?option=com_content&amp;view=article&amp;id=56&amp;Itemid=155" target="_blank">Lisans ve Kurulum</a></li>
     </ul>
   </div>
+  <div id="validation">
+        <h4>Validation</h4>
+        <div class="box-notification">
+        <span>Юablonlarэmэzda kullanэlan HTML biзimlemeleri ve CSS stilleri, anlamsal olarak doрru ve geзerlidir. Fakat yine de bazэ W3C hatalarэ gцrьntьlenebilir. Kodun %100 W3C geзerliliрini saрlamak, CSS3 ve HTML5 gibi modern teknolojilerin kullanэlmasэnэ engellemektedir. Bizim amacэmэz, yьksek kalitede юablonlar sunarak kullanэcэlarэmэza zengin bir deneyim yaюatmak olduрu iзin, bazen bazэ kurallarэ yэkmak durumunda kalabiliriz.</span>
+      </div>
+</div>
 
 </section>
 
