--- a/index_en.html
+++ b/index_en.html
@@ -1499,6 +1499,12 @@ defined('_JEXEC') or die;
       <li><a href="http://opensourcematters.org/index.php?option=com_content&amp;view=article&amp;id=56&amp;Itemid=155" target="_blank">License and Usage</a></li>
     </ul>
   </div>
+  <div id="validation">
+        <h4>Validation</h4>
+        <div class="box-notification">
+        <span>Both HTML markup and CSS styles used in our templates are semantically correct and valid. However some W3C errors still can take place. Making code 100% W3C valid eliminates the usage of modern website technologies as CSS3 features and HTML5 markup. Our goal is to deliver rich user experience with high quality templates and sometimes we have to break some rules.</span>
+      </div>
+</div>
 
 </section>
 
