--- a/index_it.html
+++ b/index_it.html
@@ -1461,6 +1461,12 @@ defined('_JEXEC') or die;
       <li><a href="http://opensourcematters.org/index.php?option=com_content&amp;view=article&amp;id=56&amp;Itemid=155" target="_blank">Licensae Uso</a></li>
     </ul>
   </div>
+  <div id="validation">
+        <h4>Validation</h4>
+        <div class="box-notification">
+        <span>I nostri template usano sia il markup HTML sia gli stili CSS entrambi in maniera semanticamente corretta e valida. È però possibile che si verifichino comunque degli errori W3C. Compilare un codice valido in WC3 elimina l'utilizzo di tecnologie web moderne, come CSS3 e HTML5 markup. Per raggiungere il nostro obiettivo di fornire un'esperienza ricca con template di alta qualità è necessario a volte infrangere alcune regole.</span>
+      </div>
+</div>
 
 </section>
 
