--- a/index_ru.html
+++ b/index_ru.html
@@ -1285,7 +1285,7 @@
     <p class="muted text-center">Рис. 36. TM Ajax Style Switcher Module</p></div>
     <p>TM Ajax Style Switcher Module - модуль для переключения цветовых схем на фронтенде. Модуль подтягивает цветовые схемы автоматически из папки color_schemes\css\ активной темы.</p>
     <p>В админ-панели модуль не имеет уникальных настроек, только стандартные для всех модулей настройки.</p>
-    <p>Обратите внимание, что на livedemo модуль работает в демо-режиме, через cookies. На действующем сайте модуль работает в полноценном режиме и доступен только для залогиненых пользователей с правами категории SuperAdmin.</p>
+    <p>Обратите внимание, что на livedemo модуль работает в демо-режиме, через cookies. На действующем сайте модуль работает в полноценном режиме и доступен только для авторизованных пользователей с правами категории SuperAdmin.</p>
   </div>
 
 </section>
