add styleswitcher description

--- a/index_ru.html
+++ b/index_ru.html
@@ -140,6 +140,7 @@
                           <li><a href="#googlemap">Googlemap plugin</a></li>
                           <li><a href="#cookies">Joomla Cookie Directive Plugin</a></li>
                           <li><a href="#joomgallery">JoomGallery</a></li>
+                          <li><a href="#style_switcher">TM Ajax Style Switcher</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -1276,6 +1277,15 @@
     <div class="img-container"><figure class="img-polaroid"><img src="img/gallery-5.jpg" alt=""></figure>
     <p class="muted text-center">Рис. 35-4. Настройки компонента JoomGallery</p></div>
     <p>Так выглядит страница описания компонента JoomGallery. Более детальная информация на <a href="http://www.en.joomgallery.net/documentation/" target="_blank" rel="nofollow">официальном сайте</a>. Также для полноценной работы данного компонента дополнительно устанавливается JoomFancybox плагин.</p>
+  </div>
+
+  <div id="style_switcher">
+    <h3>TM Ajax Style Switcher Module</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/style_switcher_1.jpg" alt=""></figure>
+    <p class="muted text-center">Рис. 36. TM Ajax Style Switcher Module</p></div>
+    <p>TM Ajax Style Switcher Module - модуль для переключения цветовых схем на фронтенде. Модуль подтягивает цветовые схемы автоматически из папки color_schemes\css\ активной темы.</p>
+    <p>В админ-панели модуль не имеет уникальных настроек, только стандартные для всех модулей настройки.</p>
+    <p>Обратите внимание, что на livedemo модуль работает в демо-режиме, через cookies. На действующем сайте модуль работает в полноценном режиме и доступен только для авторизованных пользователей с правами категории SuperAdmin.</p>
   </div>
 
 </section>
