add facebook page plugin documentation

--- a/index_ru.html
+++ b/index_ru.html
@@ -49,9 +49,10 @@
         </ul>
       </div>
       <div id="versions" class="select-menu pull-right">
-        <div class="select-menu_icon"><b>v3-1</b><i class="icon-angle-down"></i></div>
+        <div class="select-menu_icon"><b>v3-2</b><i class="icon-angle-down"></i></div>
         <ul class="select-menu_list">
-          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-1/index_ru.html"><span>v3-1</span></a></li>
+          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-2/index_ru.html"><span>v3-2</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v3-1/index_ru.html"><span>v3-1</span></a></li>
           <li><a href="/help/quick-start-guide/joomla-templates/v3-0/index_ru.html"><span>v3-0</span></a></li>
           <li><a href="/help/quick-start-guide/joomla-templates/v2-4/index_ru.html"><span>v2-4</span></a></li>
           <li><a href="/help/quick-start-guide/joomla-templates/v2-3/index_ru.html"><span>v2-3</span></a></li>
@@ -130,7 +131,7 @@
                           <li><a href="#kunena">Kunena</a></li>
                           <li><a href="#tm_ajax_contact_form">TM Ajax Contact Form</a></li>
                           <li><a href="#olark">TM Olark live chat</a></li>
-                          <li><a href="#facebook_feed">SW Facebook Display</a></li>
+                          <li><a href="#facebook_feed">TM Facebook Page Plugin</a></li>
                           <li><a href="#pinterest_feed">SW Pinterest Display</a></li>
                           <li><a href="#twitter_feed">SW Twitter Display</a></li>
                           <li><a href="#instagram_feed">TM Instagram</a></li>
@@ -1153,13 +1154,13 @@
   </div>
 
   <div id="facebook_feed">
-    <h3>SW Facebook Display</h3>
+    <h3>TM Facebook Page Plugin</h3>
     <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-1.jpg" alt=""></figure>
-    <p class="muted text-center">Рис. 26. Модуль SW Facebook Display</p></div>
-    <p>SW Facebook Display - модуль для вывода "Facebook Like Box".</p>
+    <p class="muted text-center">Рис. 26. Модуль TM Facebook Page Plugin</p></div>
+    <p>TM Facebook Page Plugin - модуль для вывода "Facebook Page Plugin".</p>
     <div class="img-container"><figure class="img-polaroid"><img src="img/facebook_feed-2.jpg" alt=""></figure>
-    <p class="muted text-center">Рис. 26-1. Настройки модуля SW Facebook Display</p></div>
-    <p>Так выглядят основные настройки модуля SW Facebook Display. Более детальная информация на <a href="http://socialwidgets.net/documentation/26-sw-facebook-display.html" target="_blank" rel="nofollow">официальном сайте</a>.</p>
+    <p class="muted text-center">Рис. 26-1. Настройки модуля TM Facebook Page Plugin</p></div>
+    <p>Так выглядят основные настройки модуля TM Facebook Page Plugin. Обязательное для заполнения поле - Facebook App ID. Это идентификатор приложения Facebook. Для того чтобы получить идентификатор, перейдите по ссылке <a href="https://developers.facebook.com/" rel="nofollow" target="_blank">https://developers.facebook.com/</a> и создайте приложение для вашего сайта. Детальную информацию по остальным настройкам можно узнать на <a href="https://developers.facebook.com/docs/plugins/page-plugin" rel="nofollow" target="_blank">официальном сайте</a>.</p>
   </div>
 
   <div id="pinterest_feed">
